fix flex wrap works section.

--- a/src/components/Works/Works.scss
+++ b/src/components/Works/Works.scss
@@ -1,6 +1,5 @@
 .works-list{
-    display: flex;
-    flex-direction: row;
+    flex-flow: column wrap;
     justify-content: space-between;
   }
   .work-item{
